[CUT-155] Added text editor to edit messages. update schedule message to work with new text formatting. fixed hight issue. fixed spacing issues.

--- a/src/app/chat/chat-list/chat-list.component.scss
+++ b/src/app/chat/chat-list/chat-list.component.scss
@@ -14,6 +14,7 @@ ion-avatar {
 }
 
 .last-message {
+  max-height: 40px;
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
